@@ -1,2 +1,5 @@
+.scm-links
+gnucash
+report
 Makefile
 Makefile.in
